# synthetify-protocol

./: .env  .eslintrc.json  .gitignore  .prettierrc.json  Anchor.toml  CODEOWNERS  Cargo.toml  config.json  license.md  license.txt  msolDist +1641384072597.json  msolDist +1642178732259.json  msolDist +1643037812989.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-sdk.yml  test.yml  update_docs.yml
.trunk/: out
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/api/: supply.js
docs/docs/: architecture-overview.md  connect-to-wallet.md  exchange.md  faq.md  faucet.md  getting-started.md  glossary.md  home.md  introduction.md  overview.md  parameters.md  platform.md  protocol.md  solana.md  staking.md  stats.md  synthetic-tokens.md  synthetify-token.md  user-guide.md  vaults.md  whats-new.md
docs/docs/technical/: account-creation.md  account.md  collateral.md  collaterals.md  introduction.md  liquidation.md  minting.md  overview.md  staking.md  state.md  swapline.md  synthetics.md  vaults.md
docs/src/pages/: index.js  user-guide.js
migrations/: deploy.ts  deploy_devnet.ts  deploy_local.ts  deploy_mainnet.ts  deploy_testnet.ts  minter.ts  testAdmin.ts
programs/exchange/: Cargo.toml
programs/exchange/src/: account.rs  context.rs  decimal.rs  lib.rs  math.rs  oracle.rs  utils.rs
programs/manager/: Cargo.toml
programs/manager/src/: lib.rs  math.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/pyth/: Cargo.toml
programs/pyth/src/: lib.rs  pc.rs
scripts/devnet/: add-asset.ts  add-collateral-wsol.ts  add-collateral.ts  add-synthetic.ts  add-vault.ts  add-vaults.ts  admin.ts  change-authority.ts  change-collateral-ratio.ts  change-health-factor.ts  change-liquidation-buffer.ts  change-liquidation-penalty.ts  change-max-collateral.ts  change-max-supply.ts  change-round-amount.ts  change-round-lenght copy.ts  claim-all.ts  create-swapline.ts  fetch-data.ts  get-state.ts  halt-vault.ts  set-admin.ts  set-delay.ts  set-halted.ts  set-oracle.ts  set-settlement-slot.ts  setttle-asset.ts  vault-entry-flow.ts  withdraw-fees.ts  withdraw-swapline-fee.ts
scripts/walletProvider/: factory.js  ledger.js  wallet.ts
sdk/: license.txt  package-lock.json  package.json  tsconfig.json
sdk/src/: exchange.ts  index.ts  manager.ts  network.ts  utils.ts
sdk/src/idl/: exchange.json  exchange.ts  manager.json  oracle.json  pyth.json  pyth.ts
test-ignore/: 1-manager.spec.ts  test-to-ignore.ts
tests/: 1-manager.spec.ts  2-exchange.spec.ts  admin-vaults.spec.ts  admin-withdraw.spec.ts  exchange-admin.spec.ts  exchange.spec.ts  interest-debt.spec.ts  isolated-burn.spec.ts  liquidation-small.spec.ts  liquidation.spec.ts  manager.spec.ts  max-collaterals.spec.ts  multicollateral.spec.ts  oracleUtils.ts  settlement.spec.ts  staking-multiuser.spec.ts  staking.spec.ts  swap-line.spec.ts  swap-without-account.spec.ts  swapline-decimal.spec.ts  utils.ts  vault-external-collateral.spec.ts  vaults-interest-debt.spec.ts  vaults-liquidation-small.spec.ts  vaults-liquidation.spec.ts  vaults.spec.ts
