[package]
name = "exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0"
anchor-spl = "0.15.0"
thincollections = "0.5"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
pyth = { path = "../pyth", features = ["cpi"] }
