[package]
name = "exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "exchange"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["localnet"]

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
thincollections = "0.5.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
pyth = { path = "../pyth", features = ["cpi"] }
