[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", branch = "master" }
anchor-spl = { git = "https://github.com/project-serum/anchor", branch = "master" }
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }
