[package]
name = "pyth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0"
anchor-spl = "0.15.0"
arrayref = "0.3.6"
bytemuck = { version = "1.7.2" }
